--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
+<meta name="apple-mobile-web-app-capable" content="yes" />
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Jit Game</title>
 	<style type="text/css">
 		html,body {
-			background-color: grey;
+			background-color: black;
 			color: #fff;
 			font-family: helvetica, arial, sans-serif;
 			margin: 0;
@@ -19,32 +21,23 @@
 			top: 0;
 			bottom: 0;
 			margin: auto;
+			height : 80%;
 		}
+
 		p{
 			height:2px;
 			font-size: 14px;
 		}
 	</style>
-
 	<script type="text/javascript" src="lib/impact/impact.js"></script>
 	<script type="text/javascript" src="lib/game/main.js"></script>
 
-	<script type="text/javascript" src="lib/game/Controllers/Players.js"></script>
-	<script type="text/javascript" src="lib/game/Controllers/Screen.js" ></script>
+	<script type="text/javascript" src="lib/game/Controllers/players.js"></script>
+	<script type="text/javascript" src="lib/game/Controllers/screen.js" ></script>
+	<script type="text/javascript" src="lib/game/Controllers/device.js" ></script>
 </head>
 <body>
-	
+	<div class="log" style="color:white"></div>
 	<canvas id="canvas"></canvas>
-	<script>
-	setInterval(function(){
-		if( innerHeight < innerWidth ){
-			document.querySelector("canvas").style.height = "80%"
-			document.querySelector("canvas").style.width  = ""
-		}else{
-			document.querySelector("canvas").style.width  = "80%"
-			document.querySelector("canvas").style.height = ""
-		}
-	},10)
-	</script>
 </body>
 </html>
